# spectre-labs

./: .gitignore  AGENTS.md  BUILD_LOOP_REFACTOR.md  CLAUDE.md  README.md  package.json
build-loop/: notify.py  pyproject.toml  test-build-validate.md  test-build.md  test-output.txt  test-tasks.md
build-loop/.spectre/: build-session.json
build-loop/spectre_build.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
build-loop/src/build_loop/: __init__.py  agent.py  cli.py  codex_env.py  git_scope.py  (+8 more)
build-loop/test-validation-loop/: scope.md  tasks.md
build-loop/tests/: test_artifact_propagation.py  test_assess_prompt.py  test_build_prompt.py  test_clean_discover_prompt.py  test_clean_execute_prompt.py  test_clean_investigate_prompt.py  test_clean_prompt.py  test_code_review_prompt.py  test_create_plan_prompt.py  test_create_tasks_prompt.py  test_default_pipeline_config.py  test_e2e_pipeline_dry_run.py  test_interactive_ship.py  test_jsonl_integration.py  test_manifest_ship.py  test_parse_session_tokens.py  test_per_stage_tool_filtering.py  test_plan_clarification_e2e.py  test_plan_clarification_fixes.py  test_plan_cli.py  test_plan_hooks.py  test_plan_pipeline.py  test_plan_resume.py  test_plan_review_prompt.py  test_plan_stats.py  test_rebase_prompt.py  test_req_validate_prompt.py  test_research_prompt.py  test_reset_progress.py  test_run_ship_pipeline.py  test_session_planning.py  test_session_ship.py  test_ship_cli.py  test_ship_hooks.py  test_ship_notify.py  test_ship_pipeline.py  test_ship_stats.py  test_stats_persistence.py  test_stream_formatting.py  test_test_commit_prompt.py  (+6 more)
(+109 files in other folders)
