[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-build"
version = "1.0.0"
description = "Automated task execution CLI for Claude Code"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
spectre-build = "build_loop:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
build_loop = ["prompts/*.md"]
